--- a/witches.css
+++ b/witches.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Fontdiner Swanky';
+  font-family: 'DK Toverheks';
   font-style: normal;
   font-weight: 400;
   src: url(https://github.com/EtoileLion/r20fonts/blob/master/DK_Toverheks.otf?raw=true) format('opentype');  
@@ -99,13 +99,13 @@ button.sheet-squawk:before {
 	float:left;
 	z-index: 4;
 	width: 100%;
-	font-family: 'Fontdiner Swanky', cursive, sans-serif;
+	font-family: 'DK Toverheks', cursive, sans-serif;
 }
 
 /* Page Elements */
 h2 {
 	text-align: center;
-	font-family: 'Fontdiner Swanky', cursive, sans-serif;	
+	font-family: 'DK Toverheks', cursive, sans-serif;	
 }
 .sheet-flexrow {
 	display: flex;
@@ -134,6 +134,10 @@ h2 {
 
 .sheet-page2 .repitem {
 	border: 1px solid #D2B48C;
+}
+
+.sheet-page2 .repitem:not(:last-child) {
+	margin-bottom: 5px;
 }
 
 .sheet-page2 label {
@@ -226,7 +230,7 @@ h2 {
 }
 
 .sheet-rolltemplate-squawk th span {
-	font-family: 'Fontdiner Swanky', cursive, sans-serif;
+	font-family: 'DK Toverheks', cursive, sans-serif;
 	font-style: italic;
 }
 
@@ -240,11 +244,29 @@ h2 {
 .sheet-rolltemplate-aw table {
 	width: 189px;
 	padding: 2px;
-	background-color: #99F;	
+	background-image: linear-gradient(to right,#8F5ECE,#99F,#8F5ECE);	
 	border-spacing: 0;    
 	border-radius: 20px;
 	border: 1px solid purple;
 	border-collapse: unset;
+}
+
+.sheet-rolltemplate-aw table {
+	background: url(https://i.ibb.co/mGQvbG5/aesparkle-normal.gif);
+}
+
+.sheet-rolltemplate-aw table.sheet-failure {
+	background: url(https://i.ibb.co/DRTL07P/aesparkle-fail.gif);
+}
+.sheet-rolltemplate-aw table.sheet-success {
+	background: url(https://i.ibb.co/KN8v8xt/aesparkle-succ.gif);
+}
+
+.sheet-rolltemplate-rr table.sheet-failure {
+	background-image: linear-gradient(to right,#CE5E5E,#BB7575,#CE5E5E);	
+}
+.sheet-rolltemplate-rr table.sheet-success {
+	background-image: linear-gradient(to right,#6ACE5E,#A7FF99,#6ACE5E);
 }
 
 /* hero name + roll name */ 
@@ -256,7 +278,7 @@ h2 {
 	padding-left: 10px;
 	padding-bottom: 10px;
 	line-height: 1.2em;
-	font-family: 'Fontdiner Swanky', cursive, sans-serif;
+	font-family: 'DK Toverheks', cursive, sans-serif;
 	font-size: 1.1em;
 	vertical-align: center;
 	border-spacing: 0;
@@ -266,7 +288,7 @@ h2 {
 /* big number dice result */
 .sheet-rolltemplate-rr .sheet-result,
 .sheet-rolltemplate-aw .sheet-result {
-	font-family: 'Fontdiner Swanky', cursive, sans-serif;
+	font-family: 'DK Toverheks', cursive, sans-serif;
 	font-size: 2em;
 	padding-top: 0px;
 	padding-right: 0px;
@@ -285,7 +307,7 @@ h2 {
 	padding-top: 0px;
 	padding-right: 30px;
 	padding-bottom: 5px;
-	font-family: 'Fontdiner Swanky', cursive, sans-serif;
+	font-family: 'DK Toverheks', cursive, sans-serif;
 	font-size: 1.3em;
 	font-weight: bold;
 	vertical-align: middle;
